--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -33,8 +33,8 @@ spring:
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:h2:file:./target/h2db/db/proba1;DB_CLOSE_DELAY=-1
-        username: proba1
-        password:
+        username: postgres
+        password: vlasotince
     h2:
         console:
             enabled: false
